--- a/week1/day6/ex9-1.html
+++ b/week1/day6/ex9-1.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>이벤트 리스너 입니다</title>
+    <title>이벤트 리스너</title>
   </head>
   <body>
     <h3>DOM 객체 이벤트 리스너</h3>
     <hr />
-    <!-- 이벤트리스너 함수등록
+    <!-- 이벤트리스너 함수등록()()()()
         (3). addEventListener 사용 -->
     <p id="p_id">마이스를 올리면 orchid색으로 변함</p>
     <script>
